<resources>
    <string name="app_name">calendar_app</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="calendar_button_name">Calendar</string>
    <string name="previous_button_text">Prev</string>
    <string name="month_text_view_text">January</string>
    <string name="next_button_text">Next</string>
    <string name="sunday_text">S</string>
    <string name="monday_text">M</string>
    <string name="tuesday_text">T</string>
    <string name="wednesday_text">W</string>
    <string name="thursday_text">Th</string>
    <string name="friday_text">F</string>
    <string name="saturday_text">Sa</string>
    <string name="calendar_button_add">+</string>
    <string name="event_title">Title</string>
    <string name="event_date">YYYY/MM/DD</string>
    <string name="event_time">Time</string>
</resources>
