<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_calendar_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalenderMainActivity"
    android:background="#34495e">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6C7E8F"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#537072"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="1">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="45dp">

                <Button
                    android:id="@+id/calendar_button_previous"
                    android:layout_width="55dp"
                    android:layout_height="32dp"
                    android:background="#6C7E8F"
                    android:padding="10dp"
                    android:text="@string/previous_button_text"
                    android:textColor="#FFFFFF"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:layout_gravity="center" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:layout_weight="0.99" >

                <TextView
                    android:id="@+id/tv_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:gravity="center|top"
                    android:text="@string/month_text_view_text"
                    android:textColor="#F4EBDB"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/calendar_button_next"
                    android:layout_width="55dp"
                    android:layout_height="32dp"
                    android:background="#6C7E8F"
                    android:padding="10dp"
                    android:text="@string/next_button_text"
                    android:textColor="#FFFFFF"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:layout_gravity="left|center_vertical" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="@string/calendar_button_add"
                    android:id="@+id/calendar_button_add"
                    android:layout_gravity="right|center"
                    android:background="#6C7E8F"
                    android:textColor="@android:color/white" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="45dp">

            </FrameLayout>
        </LinearLayout>

        <TableRow
            android:id="@+id/main_table_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="6dp">

            <TextView
                android:id="@+id/sunday_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sunday_text"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/monday_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/monday_text"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/tuesday_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tuesday_text"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/wednesday_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wednesday_text"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/thursday_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thursday_text"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/friday_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/friday_text"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/saturday_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/saturday_text"
                android:textColor="#ffffff" />
        </TableRow>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#dfdfdf"
            android:padding="2dp" />

        <GridView
            android:id="@+id/group_view_calendar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#2C4A52"
            android:cacheColorHint="#80000000"
            android:gravity="center"
            android:listSelector="@android:color/transparent"
            android:numColumns="7"
            android:stretchMode="columnWidth"
            android:textAlignment="gravity" >
        </GridView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#343434"
            android:orientation="vertical" >
        </LinearLayout>


    </LinearLayout>

    <ListView
        android:id="@+id/list_view_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">
    </ListView>

</LinearLayout>
